--- a/grep-pcre2/Cargo.toml
+++ b/grep-pcre2/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/BurntSushi/ripgrep"
 readme = "README.md"
 keywords = ["regex", "grep", "pcre", "backreference", "look"]
 license = "Unlicense/MIT"
+edition = "2018"
 
 [dependencies]
 grep-matcher = { version = "0.1.1", path = "../grep-matcher" }
