--- a/grep-searcher/Cargo.toml
+++ b/grep-searcher/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/BurntSushi/ripgrep"
 readme = "README.md"
 keywords = ["regex", "grep", "egrep", "search", "pattern"]
 license = "Unlicense/MIT"
+edition = "2018"
 
 [dependencies]
 bytecount = "0.3.2"
