--- a/grep/Cargo.toml
+++ b/grep/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/BurntSushi/ripgrep"
 readme = "README.md"
 keywords = ["regex", "grep", "egrep", "search", "pattern"]
 license = "Unlicense/MIT"
+edition = "2018"
 
 [dependencies]
 grep-cli = { version = "0.1.1", path = "../grep-cli" }
